# cpp-screenshot-program

./: .gitignore  CMakeLists.txt  README.md  main.cpp
